<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity = "center"
        android:layout_marginTop="160dp">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pasfoto"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/name"
            style="@style/TextContent"
            android:textSize="32sp"
            android:text="@string/name"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/synopsis"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/email"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/back_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back_home"/>


    </LinearLayout>
</ScrollView>
